src/tui/screens/snapshots/duklog__tui__screens__qso_entry__tests__rendering__recent_qsos_rendering__snap_fd_exchange_and_freq.snap
---
source: src/tui/screens/qso_entry.rs
expression: "render_recent(&state, 80, 4).backend()"
---
" Recent QSOs ───────────────────────────────────────────────────────────────────"
"14:30  W3ABC      20M   SSB   3A CT      14225                                  "
"                                                                                "
"                                                                                "
