src/tui/screens/snapshots/duklog__tui__screens__qso_entry__tests__rendering__recent_qsos_rendering__snap_pota_park_and_freq.snap
---
source: src/tui/screens/qso_entry.rs
expression: "render_recent(&state, 80, 4).backend()"
---
" Recent QSOs ───────────────────────────────────────────────────────────────────"
"14:30  W3ABC      20M   SSB   59/59    K-5678       14225                       "
"                                                                                "
"                                                                                "
